<?xml version="1.0"?>
<package format="2">
  <name>nano_cam</name>
  <version>0.0.0</version>
  <description>The nano_cam package</description>

  <maintainer email="b0hne@todo.todo">b0hne</maintainer>


  <license>TODO</license>

  <depend>catkin</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  
  <export>
  </export>

</package>
